// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyTextHitTestTest BidirectionalTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 2 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextPressableEdgeCaseNotPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 0 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextSeparateRunsEdgeCasePressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest BidirectionalTextSeparateRunsPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 2 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest InsertedVirtualTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest LTRTextInRTLFlowPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest MultilineRTLTextEdgeCaseNotPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 0 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest MultilineRTLTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 2 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest MultilineTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest RTLTextInRTLFlowPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest RTLTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest TextPressableWithVirtualText 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest ToggleVirtualTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest VirtualTextPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 1 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;

exports[`LegacyTextHitTestTest WrappedLTRInRTLFlowEdgeCaseNotPressable 1`] = `
{
  "AutomationId": "pressed-state",
  "Clip": null,
  "FlowDirection": "LeftToRight",
  "Foreground": "#FF000000",
  "Height": 19,
  "HorizontalAlignment": "Stretch",
  "Left": 0,
  "Margin": "0,0,0,0",
  "Padding": "0,0,0,0",
  "Text": "Pressed: 0 times.",
  "Top": 0,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 103,
  "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
}
`;
